Implement lazy-loading icon cache for faster startup
- Added index-based lazy loading that reduces startup from 3s to 4ms
- Icons are now loaded on-demand (~1ms) with LRU memory caching
- First run builds index (one-time ~6s), subsequent startups are instant

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,3 +18,4 @@ NWN2_CACHE_MAX_MB=100
 NWN2_COMPRESS_CACHE=true
 NWN2_COMPRESS_THRESHOLD_KB=100
 NWN2_SMART_PRELOAD=true
+ICON_CACHE_LAZY_LOADING=true
