--- a/backend/parsers/rust_icon_cache/Cargo.toml
+++ b/backend/parsers/rust_icon_cache/Cargo.toml
@@ -66,6 +66,12 @@ flate2 = "1.0"
 # UUID generation for unique temp filenames
 uuid = { version = "1.6", features = ["v4"] }
 
+# LRU cache for memory management
+lru = "0.12"
+
+# CRC32 for checksums
+crc32fast = "1.3"
+
 [dev-dependencies]
 # Testing
 tempfile = "3.8"
