Add tsconfig.tsbuildinfo to .gitignore and remove from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ extracted_icons_for_debug_only
 legacy_java_editor
 backend/templates/characters
 backend/tests/fixtures/
+frontend/tsconfig.tsbuildinfo
