Optimize Python class generation with vanilla classes and sequential processing for startup speedup

--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ overall_docs/
 .claude/
 .benchmarks/
 .pytest_cache/
-backend/gamedata/cache/generated_code/
+backend/gamedata/cache 
 extracted_icons_for_debug_only
 .cspell.json
 legacy_java_editor
