--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -30,12 +30,14 @@ jobs:
 
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
 
       - name: install dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
 
       - name: install frontend dependencies
         run: npm install
@@ -46,14 +48,36 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: install python dependencies
+      - name: create virtual environment
         run: |
+          python -m venv venv
+          
+      - name: activate venv and install python dependencies (Unix)
+        if: matrix.platform != 'windows-latest'
+        run: |
+          source venv/bin/activate
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-        working-directory: ./backend
-
-      - name: build rust extensions
+          pip install -r backend/requirements.txt
+          
+      - name: activate venv and install python dependencies (Windows)
+        if: matrix.platform == 'windows-latest'
         run: |
+          venv\Scripts\activate.bat
+          python -m pip install --upgrade pip
+          pip install -r backend/requirements.txt
+
+      - name: build rust extensions (Unix)
+        if: matrix.platform != 'windows-latest'
+        run: |
+          source ../venv/bin/activate
+          pip install maturin
+          maturin develop
+        working-directory: ./backend/rust_extensions
+        
+      - name: build rust extensions (Windows)
+        if: matrix.platform == 'windows-latest'
+        run: |
+          ..\venv\Scripts\activate.bat
           pip install maturin
           maturin develop
         working-directory: ./backend/rust_extensions
