--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,43 +1,6 @@
 name: Release
 
-on:
-  push:
-    tags:
-      - 'v*'
-
-jobs:
-  create-release:
-    permissions:
-      contents: write
-    runs-on: ubuntu-20.04
-    outputs:
-      release_id: ${{ steps.create-release.outputs.result }}
-
-    steps:
-      - uses: actions/checkout@v4
-      - name: setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - name: get version
-        run: echo "PACKAGE_VERSION=$(node -pe "require('./frontend/package.json').version")" >> $GITHUB_ENV
-      - name: create release
-        id: create-release
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { data } = await github.rest.repos.createRelease({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              tag_name: `v${process.env.PACKAGE_VERSION}`,
-              name: `NWN2 Save Editor v${process.env.PACKAGE_VERSION}`,
-              body: 'Take a look at the assets to download and install this app.',
-              draft: true,
-              prerelease: false
-            })
-            return data.id
-
-  build-tauri:
+build-tauri:
     needs: create-release
     permissions:
       contents: write
@@ -81,39 +44,25 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: create virtual environment
+      - name: install python dependencies and build rust extensions
+        shell: bash
+        working-directory: ./backend
         run: |
           python -m venv venv
+          if [[ "${{ runner.os }}" == "Windows" ]]; then
+            source venv/Scripts/activate
+          else
+            source venv/bin/activate
+          fi
           
-      - name: activate venv and install python dependencies (Unix)
-        if: matrix.platform != 'windows-latest'
-        run: |
-          source venv/bin/activate
           python -m pip install --upgrade pip
-          pip install -r backend/requirements.txt
+          pip install -r requirements.txt
           
-      - name: activate venv and install python dependencies (Windows)
-        if: matrix.platform == 'windows-latest'
-        run: |
-          venv\Scripts\activate.bat
-          python -m pip install --upgrade pip
-          pip install -r backend/requirements.txt
-
-      - name: build rust extensions (Unix)
-        if: matrix.platform != 'windows-latest'
-        run: |
-          source ../venv/bin/activate
-          pip install maturin
-          maturin develop
-        working-directory: ./backend/rust_extensions
-        
-      - name: build rust extensions (Windows)
-        if: matrix.platform == 'windows-latest'
-        run: |
-          ..\venv\Scripts\activate.bat
-          pip install maturin
-          maturin develop
-        working-directory: ./backend/rust_extensions
+          maturin develop --release --manifest-path rust_extensions/Cargo.toml
+          maturin develop --release --features python-bindings --manifest-path parsers/rust_tda_parser/Cargo.toml
+          maturin develop --release --features python-bindings --manifest-path parsers/rust_tlk_parser/Cargo.toml
+          maturin develop --release --manifest-path parsers/rust_erf_parser/Cargo.toml
+          maturin develop --release --manifest-path rust_icon_cache/Cargo.toml
 
       - uses: tauri-apps/tauri-action@v0
         env:
@@ -124,25 +73,3 @@ jobs:
           releaseId: ${{ needs.create-release.outputs.release_id }}
           projectPath: "./frontend"
           args: ${{ matrix.args }}
-
-  publish-release:
-    permissions:
-      contents: write
-    runs-on: ubuntu-20.04
-    needs: [create-release, build-tauri]
-
-    steps:
-      - name: publish release
-        id: publish-release
-        uses: actions/github-script@v7
-        env:
-          release_id: ${{ needs.create-release.outputs.release_id }}
-        with:
-          script: |
-            github.rest.repos.updateRelease({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              release_id: process.env.release_id,
-              draft: false,
-              prerelease: false
-            })
