--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -66,7 +66,7 @@ jobs:
           maturin develop --release --features python-bindings --manifest-path parsers/rust_tda_parser/Cargo.toml
           maturin develop --release --features python-bindings --manifest-path parsers/rust_tlk_parser/Cargo.toml
           maturin develop --release --manifest-path parsers/rust_erf_parser/Cargo.toml
-          maturin develop --release --manifest-path rust_icon_cache/Cargo.toml
+          maturin develop --release --manifest-path parsers/rust_icon_cache/Cargo.toml
 
       - uses: tauri-apps/tauri-action@v0
         env:
