--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,6 +64,17 @@ build-tauri:
           maturin develop --release --manifest-path parsers/rust_erf_parser/Cargo.toml
           maturin develop --release --manifest-path parsers/rust_icon_cache/Cargo.toml
 
+      - name: build fastapi sidecar
+        shell: bash
+        working-directory: ./backend
+        run: |
+          if [[ "${{ runner.os }}" == "Windows" ]]; then
+            source venv/Scripts/activate
+          else
+            source venv/bin/activate
+          fi
+          python build_fastapi_sidecar.py
+
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
