--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -65,7 +65,7 @@ jobs:
             ~/.nuitka
             frontend/src-tauri/binaries/*.build
             frontend/src-tauri/binaries/*.dist
-          key: nuitka-${{ runner.os }}-${{ hashFiles('backend/**/*.py', 'backend/requirements.txt') }}
+          key: nuitka-${{ runner.os }}-${{ hashFiles('backend/build_fastapi_sidecar.py', 'backend/fastapi_server.py', 'backend/requirements.txt') }}
           restore-keys: |
             nuitka-${{ runner.os }}-
       
@@ -103,6 +103,13 @@ jobs:
             source venv/bin/activate
           fi
           python build_fastapi_sidecar.py
+
+      - name: add external binary to tauri config for production build
+        shell: bash
+        working-directory: ./frontend
+        run: |
+          # Add externalBin entry back for production builds (generic name, Tauri handles platform suffixes)
+          sed -i 's/"resources": \[\]/"externalBin": ["binaries\/fastapi-server"],"resources": []/g' src-tauri/tauri.conf.json
 
       - uses: tauri-apps/tauri-action@v0
         env:
