NWN-11,12,73: Add game state editor with companion influence, campaign, and module variables editing

--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,7 @@ node_modules/
 sample_save/
 test_module/
 .env.local
-backend/cache/compiled_cache/
-backend/cache/icons/
+backend/cache/
 .env
 .env.local
 2da/
