--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo -p 24314",
-    "build": "next build --turbo",
+    "dev": "next dev -p 24314",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "tauri": "tauri",
@@ -31,7 +31,7 @@
     "clsx": "^2.1.1",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.525.0",
-    "next": "^15.5.4",
+    "next": "^16.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-intl": "^7.1.11",
@@ -46,7 +46,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.4.3",
+    "eslint-config-next": "^16.0.10",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
