--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,6 +1,8 @@
-[tool:pytest]
-DJANGO_SETTINGS_MODULE = config.settings
+[pytest]
+
 python_files = tests.py test_*.py *_tests.py
 python_classes = Test*
 python_functions = test_*
-addopts = --reuse-db
+addopts =
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
