--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -81,8 +81,10 @@ jobs:
 
           if [[ "${{ runner.os }}" == "Windows" ]]; then
             source venv/Scripts/activate
+            echo "$PWD/venv/Scripts" >> $GITHUB_PATH
           else
             source venv/bin/activate
+            echo "$PWD/venv/bin" >> $GITHUB_PATH
           fi
 
           python -m pip install --upgrade pip
