--- a/backend/rust/Cargo.toml
+++ b/backend/rust/Cargo.toml
@@ -23,7 +23,7 @@ anyhow = "1.0"
 log = "0.4"
 env_logger = "0.11"
 
-tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "time", "fs", "io-util"] }
+tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "time", "fs", "io-util", "macros"] }
 rayon = "1.10"
 num_cpus = "1.16"
 futures-util = "0.3"
