--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 24314",
-    "build": "next build",
-    "start": "next start",
+    "dev": "vite --port 24314",
+    "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint src",
     "tauri": "tauri",
     "tauri:dev": "tauri dev",
@@ -22,21 +22,26 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@tailwindcss/vite": "^4.1.18",
     "@tauri-apps/api": "^2.7.0",
     "@tauri-apps/plugin-dialog": "^2.3.2",
     "@tauri-apps/plugin-http": "^2.5.2",
     "@tauri-apps/plugin-updater": "^2.9.0",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-window": "^1.8.8",
+    "@vitejs/plugin-react": "^5.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.525.0",
-    "next": "^16.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-intl": "^7.1.11",
+    "react-router-dom": "^7.12.0",
     "react-window": "^1.8.11",
-    "react-window-infinite-loader": "^1.0.10"
+    "react-window-infinite-loader": "^1.0.10",
+    "vite": "^7.3.1",
+    "vite-tsconfig-paths": "^6.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -47,7 +52,6 @@
     "@types/react-dom": "^19",
     "@types/react-window-infinite-loader": "^1.0.9",
     "eslint": "^9",
-    "eslint-config-next": "^16.0.10",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "tailwindcss": "^4",
